--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "CircuitVerse Element Adder",
+  "name": "AICreatesCircuits",
   "version": "1.0",
   "description": "Adds circuit elements to CircuitVerse canvas",
   "permissions": [
